--- a/src/componentes/ListaSuspensa/ListaSuspensa.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.css
@@ -1,21 +1,20 @@
-.campo-texto {
-    margin: 24px 0;
-}
-
-.campo-texto label {
+.lista-suspensa {
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
 }
 
-.campo-texto input {
-    width: 100%;
+.lista-suspensa select {
     background-color: #FFF;
     box-shadow: 10px 10px 30px 0px #0000000F;
-    
+    width: 100%;
+    border: none;
     font-size: 24px;
     padding: 24px;
-    box-sizing: border-box;
+}
 
-    border: none;
+.lista-suspensa label {
+    display: block;
+    margin-bottom: 8px;
+    font-size: 24px;
 }
