--- a/src/componentes/Card/Card.css
+++ b/src/componentes/Card/Card.css
@@ -12,13 +12,22 @@
     height: 40%;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
-    background-color: #57C278;
+    /* background-color: #57C278; */
 }
 
 .conteudo {
     display: grid;
     justify-items: center;
     transform: translateY(-30%);
+}
+
+.conteudo img {
+    width: 120px;
+    height: 120px;
+    border-radius: 999px;
+    background-image: url("../../../public/imagens/colaborador/colaboradorDefault.png");
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .textos h4 {
