--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #D9F7E9;
+    /* background-color: #D9F7E9; */
 }
 
 .time h3 {
@@ -14,12 +14,13 @@
 .barra {
     width: 30px;
     height: 5px;
-    background-color: #57C278;
     border-radius: 999px;
 }
 
 .cards {
     display: flex;
-    gap: 25px;
+    gap: 50px;
     margin: 40px 0;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
